add canvas backgroud

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  <canvas id="c"></canvas>
   <div class="last-wrp">
     <div class="last-timer timer">
       <!-- <h2 class="timer__title">just do it </h2> -->
@@ -102,6 +103,7 @@
     </div>
   </div>
   <!-- <script src="axios.min.js"></script> -->
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/animejs/1.0.0/anime.min.js'></script><script  src="./script.js"></script>
   <script src="index.js"></script>
 </body>
 
